<resources>
    <string name="app_name" translatable="false">八方查</string>

    <string name="main_tab_name_home" translatable="false">首页</string>
    <string name="main_tab_name_attention" translatable="false">关注</string>
    <string name="main_tab_name_find" translatable="false">发现</string>
    <string name="main_tab_name_me" translatable="false">我的</string>

    <string name="search_advanced">高级搜索</string>
    <string name="search_patent">搜专利</string>
    <string name="search_mark">搜商标</string>
    <string name="search_shesu">搜涉诉</string>

    <string name="app_title_user_center">个人中心</string>
    <string name="app_title_modify_name">修改昵称</string>
    <string name="app_title_telphone">手机号码</string>
    <string name="app_title_modify_email">修改邮箱</string>
    <string name="app_title_login">登录</string>
    <string name="app_title_register">注册</string>
    <string name="app_title_agreement">服务协议</string>

    <string name="menu_text_nickname">昵称</string>
    <string name="menu_text_avatar">头像</string>
    <string name="menu_text_phone">手机号码</string>
    <string name="menu_text_email">邮箱</string>
    <string name="menu_text_modify_password">修改密码</string>
    <string name="menu_text_enterprise_query">企业查询</string>
    <string name="menu_text_app_share">App分享</string>
    <string name="menu_text_good_evaluate">给个好评</string>
    <string name="menu_text_setting">设置</string>
    <string name="menu_text_basic_info">基本信息</string>
    <string name="menu_text_intellectual_property">只是产权</string>
    <string name="menu_text_publicly_supervise">公共监督</string>
    <string name="menu_text_enterprise_management">企业经营</string>

    <string name="btn_logout">退出登录</string>
    <string name="btn_submit">提交</string>
    <string name="btn_vercode">获取验证码</string>
    <string name="btn_click_login">点击登录</string>
    <string name="btn_login">登录</string>
    <string name="btn_register">注册</string>
    <string name="btn_login_qq_account">QQ登录</string>
    <string name="btn_login_weixin_account">微信登录</string>
    <string name="btn_click_vercode">点击获取</string>

    <string name="tv_legal_representative">法定代表人</string>
    <string name="tv_registered_capital">注册资本</string>
    <string name="tv_registered_date">注册日期</string>
    <string name="tv_more_contact_info">其他联系信息</string>
    <string name="tv_enterprise_introduce">公司简介</string>

    <string name="tv_forget_password">忘记密码?</string>
    <string name="tv_register_account">帐号注册</string>
    <string name="tv_login_third_account">第三方登录</string>
    <string name="tv_agreement">点击注册即同意\"用户使用协议\"</string>
    <string name="tv_share_pyq">朋友圈</string>
    <string name="tv_share_wx">微信</string>
    <string name="tv_share_kj">空间</string>
    <string name="tv_share_qq">QQ</string>
    <string name="tv_comment">评论</string>
    <string name="tv_share">分享</string>
    <string name="tv_attention">关注</string>
    <string name="tv_me">我的</string>

    <string name="tip_share_successed">分享成功了</string>
    <string name="tip_share_fail">分享失败了</string>
    <string name="tip_share_cancel">分享取消了</string>

    <string name="home_search_hint">请输入企业名、品牌名、经营项目名称...</string>
    <string name="et_hint_please_input_nickname">请输入昵称</string>
    <string name="et_hint_please_input_email">请输入邮箱</string>
    <string name="et_hint_please_input_phone">请输入手机号码</string>
    <string name="et_hint_please_input_vercode">请输入验证码</string>
    <string name="et_hint_please_input_old_password">请输入原密码</string>
    <string name="et_hint_please_input_new_password">请输入新密码</string>
    <string name="et_hint_please_confirm_new_password">请确认新密码</string>
    <string name="et_hint_username">用户名</string>
    <string name="et_hint_password">密码</string>
    <string name="et_hint_nickname">昵称</string>
</resources>
