<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include layout="@layout/center_title_toolbar_layout"/>
    <EditText
        android:id="@+id/old_password_et"
        style="@style/rect_edittext_style"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:hint="@string/et_hint_please_input_old_password"
        android:paddingLeft="10dp"
        android:maxLength="10"
        />
    <EditText
        android:id="@+id/new_password_et"
        style="@style/rect_edittext_style"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/et_hint_please_input_new_password"
        android:paddingLeft="10dp"
        android:maxLength="10"
        />
    <EditText
        android:id="@+id/comfirm_new_password_et"
        style="@style/rect_edittext_style"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/et_hint_please_confirm_new_password"
        android:paddingLeft="10dp"
        android:maxLength="10"
        />
    <Button
        android:id="@+id/submit_btn"
        android:layout_marginTop="40dp"
        style="@style/submit_btn_style"
        android:text="@string/btn_submit"
        />

</LinearLayout>