<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/center_title_toolbar_layout"/>
    <EditText
        android:id="@+id/phone_number_et"
        style="@style/rect_edittext_style"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:maxLength="11"
        android:hint="@string/et_hint_please_input_phone"
        />
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <EditText
            android:id="@+id/vercode_et"
            style="@style/rect_edittext_style"
            android:hint="@string/et_hint_please_input_vercode"
            android:layout_weight="1"
            />
        <Button
            android:id="@+id/get_vercode_bt"
            android:layout_marginLeft="10dp"
            android:text="@string/btn_vercode"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_16"
            android:background="@color/blue_base_bg"
            android:layout_width="100dp"
            android:layout_height="40dp" />
    </LinearLayout>
    <Button
        android:id="@+id/submit_bt"
        style="@style/submit_btn_style"
        android:layout_marginTop="40dp"
        android:text="@string/btn_submit"
        />

</LinearLayout>