<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#E6FFFFFF"
    android:layout_height="wrap_content">
    <LinearLayout
        android:id="@+id/one_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/share_pyq"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/share_pyq"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/tv_share_pyq"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/share_wx"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/share_wx"
            android:gravity="center"
            android:text="@string/tv_share_wx"
            android:drawablePadding="10dp"
            android:textSize="@dimen/font_size_16" />

        <TextView
            android:id="@+id/share_kj"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/share_kj"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/tv_share_kj"
            android:textSize="@dimen/font_size_16" />
        <TextView
            android:id="@+id/share_qq"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@mipmap/share_qq"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:text="@string/tv_share_qq"
            android:textSize="@dimen/font_size_16" />
    </LinearLayout>
</LinearLayout>