<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/rl_bottom_layout" android:background="@color/light_gray" android:layout_width="fill_parent" android:layout_height="50.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <View android:id="@+id/v_infobottom_divider"
        style="@style/MyHorizontalDividerLine" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_infomation_bottom"
        android:layout_width="fill_parent"
        android:layout_height="49.5dip"
        android:baselineAligned="false"
        android:layout_below="@id/v_infobottom_divider">
        <TextView

            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_999"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/attention_tv"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/tv_attention"
            android:drawableTop="@mipmap/icon_bottom_attention"
            android:layout_weight="1.0" />
        <TextView
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_999"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/comment_tv"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/tv_comment"
            android:drawableTop="@mipmap/icon_bottom_evaluate"
            android:layout_weight="1.0" />


        <TextView
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_999"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/share_tv"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/tv_share"
            android:drawableTop="@mipmap/icon_bottom_share"
            android:layout_weight="1.0" />
        <TextView
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_999"
            android:gravity="center"
            android:layout_gravity="center_vertical"
            android:id="@+id/me_tv"
            android:paddingTop="4.0dip"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:text="@string/tv_me"
            android:drawableTop="@mipmap/icon_person_select"
            android:layout_weight="1.0" />
    </LinearLayout>
</RelativeLayout>