<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/center_title_toolbar_layout"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/login_name_et"
            style="@style/rect_edittext_style"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="80.0dip"
            android:drawableLeft="@mipmap/login_number"
            android:drawablePadding="10.0dip"
            android:ems="10"
            android:hint="@string/et_hint_username"
            android:inputType="number"
            android:paddingLeft="10.0dip"
            android:singleLine="true"
            />

        <EditText
            android:id="@+id/login_passwrod_et"
            style="@style/rect_edittext_style"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="15.0dip"
            android:drawableLeft="@mipmap/login_password"
            android:drawablePadding="10.0dip"
            android:hint="@string/et_hint_password"
            android:inputType="textPassword"
            android:paddingLeft="10.0dip"
            android:singleLine="true"
            />

        <Button
            android:id="@+id/login_btn"
            android:layout_width="fill_parent"
            android:layout_height="44.0dip"
            android:layout_marginLeft="30.0dip"
            android:layout_marginRight="30.0dip"
            android:layout_marginTop="40.0dip"
            android:background="@drawable/bg_fillet_login_btn"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            android:textSize="@dimen/font_size_20" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50.0dip"
            android:layout_marginTop="10.0dip"
            android:gravity="center"
            android:orientation="horizontal" >


            <TextView
                android:id="@+id/forget_password_tv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/tv_forget_password"
                android:textColor="@color/blue_base_bg"
                android:textSize="@dimen/font_size_16" />
            <View
                android:layout_width="1.0dip"
                android:layout_height="16.0dip"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10.0dip"
                android:layout_marginRight="10.0dip"
                android:background="@color/blue_base_bg" />
            <TextView
                android:id="@+id/register_account_tv"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:text="@string/tv_register_account"
                android:textColor="@color/blue_base_bg"
                android:textSize="@dimen/font_size_16" />

        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginLeft="38.0dip"
            android:layout_marginRight="38.0dip"
            android:gravity="center_horizontal" >

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/middle_tv"
                android:background="@color/text_999"
                android:contentDescription="@null" />

            <TextView
                android:id="@+id/middle_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginLeft="15.0dip"
                android:layout_marginRight="15.0dip"
                android:text="@string/tv_login_third_account"
                android:textColor="@color/text_999"
                android:textSize="@dimen/font_size_16" />
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/middle_tv"
                android:background="@color/text_999"
                android:contentDescription="@null" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40.0dip"
            android:layout_marginBottom="50.0dip"
            android:layout_marginLeft="38.0dip"
            android:layout_marginRight="38.0dip"
            android:layout_marginTop="20.0dip"
            android:baselineAligned="false"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/ll_thridlogin_qq"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:background="@drawable/bg_qqlogin_blue"
                android:orientation="horizontal" >

                <ImageView
                    android:layout_width="40.0dip"
                    android:layout_height="40.0dip"
                    android:background="@drawable/bg_lefthelf_qqblue"
                    android:contentDescription="@null"
                    android:padding="12.0dip"
                    android:src="@mipmap/third_login_qq" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/btn_login_qq_account"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_thridlogin_wx"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20.0dip"
                android:layout_weight="1.0"
                android:background="@drawable/bg_wxlogin_green"
                android:orientation="horizontal"
                >

                <ImageView
                    android:layout_width="40.0dip"
                    android:layout_height="40.0dip"
                    android:background="@drawable/bg_lefthelf_wxgreen"
                    android:contentDescription="@null"
                    android:padding="10.0dip"
                    android:src="@mipmap/third_login_wx" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:gravity="center"
                    android:text="@string/btn_login_weixin_account"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>