<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include
        layout="@layout/center_title_toolbar_layout"/>
    <RelativeLayout
        android:background="@color/white"
        android:layout_width="match_parent"
        android:paddingLeft="20dp"
        android:layout_height="70dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/text_333"
            android:layout_centerVertical="true"
            android:text="@string/menu_text_avatar"
            />
        <com.bafangcha.app.widget.CircleImageView
            android:id="@+id/header_iv"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@mipmap/mark_07"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_marginRight="30dp"
            />
    </RelativeLayout>
    <View
        style="@style/MyHorizontalDividerLine"/>
    <RelativeLayout
        android:id="@+id/rl_modify_nickname"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/text_333"
            android:layout_centerVertical="true"
            android:text="@string/menu_text_nickname" />
        <TextView
            android:id="@+id/username_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:text="xxxx"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_666"
            android:drawableRight="@mipmap/usercenter_arrow_right"
            android:drawablePadding="20dp"
            />
    </RelativeLayout>
    <View
        android:layout_height="5dp"
        style="@style/vertical_space_style"/>
    <RelativeLayout
        android:id="@+id/rl_modify_phone"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/text_333"
            android:layout_centerVertical="true"
            android:text="@string/menu_text_phone" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_666"
            android:drawableRight="@mipmap/usercenter_arrow_right"
            android:drawablePadding="20dp"
            />
    </RelativeLayout>
    <View
        style="@style/MyHorizontalDividerLine"/>
    <RelativeLayout
        android:id="@+id/rl_modify_email"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/text_333"
            android:layout_centerVertical="true"
            android:text="@string/menu_text_email" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_666"
            android:drawableRight="@mipmap/usercenter_arrow_right"
            android:drawablePadding="20dp"
            />
    </RelativeLayout>
    <View
        style="@style/MyHorizontalDividerLine"/>
    <RelativeLayout
        android:id="@+id/rl_modify_password"
        android:background="@color/white"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="50dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_size_20"
            android:textColor="@color/text_333"
            android:layout_centerVertical="true"
            android:text="@string/menu_text_modify_password" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/font_size_16"
            android:textColor="@color/text_666"
            android:drawableRight="@mipmap/usercenter_arrow_right"
            android:drawablePadding="20dp"
            />
    </RelativeLayout>

    <TextView
        android:id="@+id/logout_btn"
        android:layout_marginTop="50dp"
        android:background="@color/space_color"
        android:gravity="center"
        android:text="@string/btn_logout"
        android:textSize="@dimen/font_size_20"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="40dp" />


</LinearLayout>